# gphotos-album-downloader

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-06-23-gphotos-album-downloader-design.md
gphotos_dl/: __init__.py  browser.py  cli.py  downloader.py  gpwc_api.py  lightbox.py  metrics.py  navigation.py  probe.py  saver.py  state.py  urls.py  verify.py
tests/: test_cli.py  test_gpwc_api.py  test_lightbox.py  test_metrics.py  test_navigation.py  test_state.py  test_urls.py  test_verify.py
